; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python-frontend.c_set_current_profile.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python-frontend.c_set_current_profile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @set_current_profile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @set_current_profile(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call i32 @parse_args(i32* %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %6)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = call i32* (...) @python_none()
  store i32* %11, i32** %3, align 8
  br label %18

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @UNUSED_PARAMETER(i32* %13)
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @obs_frontend_set_current_profile(i8* %15)
  %17 = call i32* (...) @python_none()
  store i32* %17, i32** %3, align 8
  br label %18

18:                                               ; preds = %12, %10
  %19 = load i32*, i32** %3, align 8
  ret i32* %19
}

declare dso_local i32 @parse_args(i32*, i8*, i8**) #1

declare dso_local i32* @python_none(...) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1

declare dso_local i32 @obs_frontend_set_current_profile(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
